二级modal布局,文件上传,渲染列表,点击切换

--- a/public/manage_my/css/base.css
+++ b/public/manage_my/css/base.css
@@ -127,3 +127,11 @@ body {
 .mb_30{
     margin-bottom: 30px;
 }
+
+/* 遮挡样式 */
+#fileUpload{
+    position: absolute;
+    opacity: 0;
+    width: 82px;
+    height: 34px;
+}
