--- a/public/mobile_my/css/searchList.css
+++ b/public/mobile_my/css/searchList.css
@@ -106,3 +106,15 @@
     display: block;
     margin: 0 auto;
 }
+
+
+/* 中间区域 loading 状态 */
+.lt_content.loading::before{
+    content:"";
+    /* display: block; */
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url("../images/loading.gif") no-repeat center;
+    z-index: 998;
+}
